# grok-cli

./: Cargo.toml  LICENSE  README.md  config.template
src/: main.rs
