[package]
name = "grok-cli"
version = "1.2.0"
edition = "2021"
authors = ["Hayden"]
description = "Grok in the terminal"
repository = "https://github.com/haydenkz/grok-cli"
license = "mit"

[[bin]]
name = "grok"
path = "src/main.rs"

[dependencies]
reqwest = "0.11"
tokio = { version = "1.43.0", features = ["full"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

